# autoresearch-sdrl

./: .gitignore  README.md  analysis.ipynb  program.md  pyproject.toml  train.py
.claude/: settings.json
