[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous streaming deep RL research swarm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3.0",
    "numpy>=1.26.4",
    "gymnasium[mujoco]>=0.29.1",
    "shimmy[dm-control]>=1.0.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
]
